carousel all structure

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-player": "^2.12.0",
+    "tw-elements": "^1.0.0-beta2",
     "vite": "^4.0.4"
   },
   "devDependencies": {
