--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
+    "tw-elements": "^1.0.0-beta2",
     "vite": "^4.0.4"
   },
   "devDependencies": {
