--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,8 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.11.2",
     "tw-elements": "^1.0.0-beta2",
-    "vite": "^4.0.4"
+    "vite": "^4.0.4",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
@@ -31,7 +32,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "postcss": "^8.4.24",
-    "prettier": "^2.8.3",
-    "tailwindcss": "^3.3.2"
+    "prettier": "^2.8.3"
   }
 }
