--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
   "devDependencies": {
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
-    "husky": "^8.0.3"
+    "husky": "^8.0.3",
+    "tailwindcss": "^3.3.2"
   },
   "dependencies": {
-    "react-player": "^2.12.0"
+    "react-player": "^2.12.0",
+    "tailwindcss": "^3.3.2"
   }
 }
