--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,9 @@
     "react-multi-carousel": "^2.8.4",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.11.2",
+    "tailwindcss": "^3.3.2",
     "tw-elements": "^1.0.0-beta2",
-    "vite": "^4.0.4",
-    "tailwindcss": "^3.3.2"
+    "vite": "^4.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
