ajout de la page AdminSection

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-touch-backend": "^16.0.1",
     "react-player": "^2.12.0",
     "tailwindcss": "^3.3.2"
   }
