--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "i": "^0.3.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-multi-carousel": "^2.8.4",
