--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "tailwindcss": "^3.3.2",
     "tw-elements": "^1.0.0-beta2",
     "vite": "^4.0.4",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "react-share": "^4.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
