--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dnd-touch-backend": "^16.0.1",
     "react-player": "^2.12.0",
-    "tailwindcss": "^3.3.2"
+    "react-share": "^4.4.1",
+    "tailwindcss": "^3.3.2",
+    "tailwindcss-animated": "^1.0.1"
   }
 }
