--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mysql2": "^3.0.1",
-    "argon2": "0.30.3"
+    "argon2": "0.30.3",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "^8.32.0",
@@ -20,6 +21,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
-    "prettier": "2.8.3"
+    "prettier": "2.8.3",
+    "jsonwebtoken": "^9.0.0"
   }
 }
