--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,9 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^3.0.1",
+    "axios": "^0.21.1",
     "i": "^0.3.7",
+    "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
@@ -18,11 +20,10 @@
     "react-multi-carousel": "^2.8.4",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.11.2",
+    "react-share": "^4.4.1",
     "tailwindcss": "^3.3.2",
     "tw-elements": "^1.0.0-beta2",
-    "vite": "^4.0.4",
-    "axios": "^0.21.1",
-    "react-share": "^4.4.1"
+    "vite": "^4.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
