--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-player": "^2.12.0",
     "react-router-dom": "^6.11.2",
     "react-share": "^4.4.1",
+    "react-tailwindcss-select": "^1.8.5",
     "tailwindcss": "^3.3.2",
     "tw-elements": "^1.0.0-beta2",
     "vite": "^4.0.4"
