--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -17,6 +17,7 @@
   },
   "plugins": ["react", "import"],
   "rules": {
+    "react/require-default-props": "off",
     "react/jsx-props-no-spreading": "off",
     "no-console": "off",
     "no-restricted-syntax": [
