cloudinary video bdd

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -6,3 +6,6 @@ DB_USER=notroot
 DB_PASSWORD=helloworld
 DB_NAME=db_origin
 JWT_SECRET=secret
+CLOUD_NAME=CLOUD_NAME
+API_KEY=API_KEY
+API_SECRET=API_SECRET
