--- a/frontend/.env.sample
+++ b/frontend/.env.sample
@@ -1,2 +1,5 @@
 # call it in React with import.meta.env.VITE_BACKEND_URL
 VITE_BACKEND_URL=http://localhost:6000
+CLOUD_NAME=CLOUD_NAME
+API_KEY=API_KEY
+API_SECRET=API_SECRET
