--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-csv": "^2.2.2",
+    "react-day-and-night-toggle": "^1.0.18",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
